--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
   <h1>Learning JavaScript JSON</h1>
-  
+
+<div id="message"></div>
 
 </body>
 <script type="text/javascript" src="js/new.js"></script>
